# oaknut-zip

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  nutzip.py  oaknut_zip.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
scripts/: README.md.j2  generate_readme.py
src/oaknut_zip/: __init__.py  __main__.py  api.py  cli.py  formatting.py  models.py  parsing.py
tests/: test_nutzip.py  test_oaknut_zip.py
