[project]
name = "oaknut-zip"
dynamic = ["version"]
authors = [{ name = "Robert Smallshire", email = "robert@smallshire.org.uk" }]
description = "Work with ZIP files containing Acorn computer metadata."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "xattr>=1.0; sys_platform == 'darwin'",
]

[project.scripts]
oaknut-zip = "oaknut_zip.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "oaknut_zip.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
test = [
    "pytest>=7.0",
    "xattr>=1.0; sys_platform == 'darwin'",
]
dev = [
    "bump-my-version>=0.28.0",
    {include-group = "test"},
]

[tool.bumpversion]
current_version = "0.2.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
tag = true
commit = true
message = "Bump version: {current_version} → {new_version}"
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
files = [
    { filename = "src/oaknut_zip/__init__.py" },
]

[tool.uv]
index-url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
